<resources>
    <string name="app_name">Admin App</string>
    <string-array name="masa">
        <item>KG</item>
        <item>GRAM</item>
        <item>Liter</item>
        <item>ML</item>
    </string-array>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logosplashscreen">LogoSplashscreen</string>
    <string name="add">Tambah</string>
    <string name="username">Username</string>
    <string name="process">Process</string>
    <string name="masukkan_nama_pengguna">Masukkan Nama Pengguna</string>
    <string name="alamat">Alamat</string>
    <string name="cek_nama_pengguna">Cek Nama Pengguna</string>
    <string name="arya_enrico">Arya Enrico</string>
    <string name="phaksibangunasmoro">phaksibangunasmoro</string>
    <string name="mutasi_transaksi">Mutasi Transaksi</string>
    <string name="hi">Hi,</string>
    <string name="input_sampah">Input Sampah</string>
    <string name="ubah_transaksi">Ubah Transaksi</string>
    <string name="tambah_sampah">Tambah Sampah</string>
    <string name="tambah_user">Tambah User</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="ubah_harga">Ubah Harga Sampah</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="bobot">Bobot</string>
    <string name="daftar_pengajuan">Daftar Pengajuan</string>
    <string name="tanggal">2022–03-08</string>
    <string name="nominal">Rp.320.000</string>
    <string name="statuspengajuan">Sedang Diproses</string>
    <string name="Rp">Rp</string>
    <string name="_300_0000">300.0000</string>
    <string name="detail_pengajuan">Detail Pengajuan</string>
    <string name="nama">Nama</string>
    <string name="tanggal_pengajuan">Tanggal Pengajuan</string>
    <string name="tanggal_diproses">Tanggal Diproses</string>
    <string name="tanggal_penarikan">Tanggal Penarikan</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="kategori_sampah">Kategori Sampah</string>
    <string name="disetujui">Diterima</string>
    <string name="masukkan_nama_sampah">Masukkan Nama Sampah</string>
    <string name="harga_nasabah">Harga Nasabah</string>
    <string name="masukkan_harga_nasabah">Masukkan Harga Nasabah</string>
    <string name="tambah">Tambah</string>
    <string name="masukkan_kategori_sampah">Masukkan Kategori Sampah</string>
    <string name="kategori">Kategori</string>
    <string name="tanggaltv">Tanggal</string>
    <string name="daftar_sampah">Daftar Sampah</string>
    <string name="total">Total</string>
    <string name="bobots">10 Kg</string>
    <string name="gayung">Gayung</string>
    <string name="rp_13_000">Rp. 13.000</string>
    <string name="sampah">Sampah</string>
    <string name="tanggal_berlaku">Tanggal Berlaku</string>
    <string name="nama_sampah">Nama Sampah</string>
    <string name="harga_pengepul">Harga Pengepul</string>
    <string name="masukkan_harga_pengepul">Masukkan Harga Pengepul</string>
    <string name="tanggal_awal">Tanggal Awal</string>
    <string name="tanggal_akhir">Tanggal Akhir</string>
    <string name="cari">Cari</string>
    <string name="image">image</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="proses">Proses</string>
    <string name="_0">0</string>
    <string name="harga_nasabah_lama">Harga Nasabah Lama</string>
    <string name="_3000">3000</string>
    <string name="_4500">4500</string>
    <string name="tanggal_berlaku_harga_baru">Tanggal Berlaku Harga Baru</string>
    <string name="harga_nasabah_baru">Harga Nasabah Baru</string>
    <string name="masukkan_harga_nasabah_baru">Masukkan Harga Nasabah Baru</string>
    <string name="harga_pengepul_lama">Harga Pengepul Lama</string>
    <string name="harga_pengepul_baru">Harga Pengepul baru</string>
    <string name="tanggal_penyetoran">Tanggal Penyetoran</string>
    <string name="daftar_mutasi_detail">Daftar Mutasi</string>
    <string name="cek_username_admin">Cek username</string>
    <string name="tanggal12">Tanggal</string>
    <string name="loginpage">login</string>
    <string name="forgot">lupa password</string>
    <string name="satuanPenimbanagan">Satuan Penimbangan</string>
    <string name="saldo">Total Saldo</string>
    <string name="pondok_maharta_blok_a1_no_22">Pondok Maharta Blok A1 No 22</string>
    <string name="satuan_penimbangan">Satuan Penimbangan</string>

    <string-array name="kategorisampah">
        <item>Plastik</item>
        <item>Besi</item>
        <item>Kertas</item>
    </string-array>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_page">Profile Page</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="logout">Logout</string>
    <string name="logout1">Logout</string>
    <string name="batalkan">Batalkan</string>
</resources>