<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UbahHarga">


        <TextView
            android:id="@+id/tv_kategoriSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sampah"
            android:textColor="@color/Green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/Green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_kategoriSampah">

            <AutoCompleteTextView
                android:id="@+id/namaSampah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/nama_sampah"
                android:textColor="@color/Gray"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_HargaNasabahLama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/harga_nasabah_lama"
            android:textColor="@color/Green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etHargaNasabahLama"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/_3000"
            android:importantForAutofill="yes"
            android:inputType="none"
            android:editable="false"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HargaNasabahLama"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_HargaPengepulLama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/harga_pengepul_lama"
            android:textColor="@color/Green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHargaNasabahLama"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etHargaPengepulLama"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/_4500"
            android:importantForAutofill="no"
            android:inputType="none"
            android:editable="false"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HargaPengepulLama"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_tanggalBerlaku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/tanggal_berlaku"
            android:textColor="@color/Green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHargaPengepulLama"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/ettgl_berlaku"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/masukkan_nama_sampah"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tanggalBerlaku"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_HargaNasabah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins"
            android:text="@string/harga_nasabah"
            android:textColor="@color/Green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ettgl_berlaku"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etHargaNasabah"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/masukkan_harga_nasabah"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HargaNasabah"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_HargaPengepul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins"
            android:text="@string/harga_pengepul"
            android:textColor="@color/Green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHargaNasabah"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etHargaPengepul"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/masukkan_harga_pengepul"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HargaPengepul"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <Button
            android:id="@+id/findUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#56983D"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tambah"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHargaPengepul" />
    </androidx.constraintlayout.widget.ConstraintLayout>


