<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.InputSampah">


    <!--This is the parent linear layout
        which we will inflate soon-->

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/username"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="#56983D" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="6dp"
            android:textSize="14sp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/masukkan_nama_pengguna"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/findUser"
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:backgroundTint="#56983D"
            android:paddingRight="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/cek_nama_pengguna"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:textColor="@color/white" />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/Green"
        android:text="@string/sampah">
    </TextView>


    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#56983D"
        android:fontFamily="@font/poppins_light"
        android:text="@string/add"
        android:textAllCaps="false"
        android:layout_marginLeft="290dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_list"
        android:layout_width="380dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:backgroundTint="#56983D"
        android:paddingRight="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/process"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        android:textColor="@color/white" />

    </LinearLayout>
   </ScrollView>
</LinearLayout>